Revert "Disable permanent scrollbar for updater, Fixes #43"
This reverts commit d45d693bf5a718262af62d033dc949e9cf449bc9.

--- a/app/assets/stylesheets/modules/activity-feed.css.scss
+++ b/app/assets/stylesheets/modules/activity-feed.css.scss
@@ -352,7 +352,7 @@
   transition: margin 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
   &.expanded {
     margin-top: 0;
-    overflow-x: auto;
+    overflow-x: scroll;
   }
   .series-title {
     color: #fff;
